--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RoTaxCalculator - Calculator Taxe Romania 2026</title>
 
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Calculator gratuit de taxe pentru investitori din România. Calculați rapid impozite pe dividende, câștiguri din acțiuni, cripto, chirii conform legislației 2026.">
+    <meta name="keywords" content="calculator taxe romania, impozit dividende, capital gains romania, taxe crypto, CASS, declaratie unica 212, investitii romania 2026">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="content-language" content="ro">
+    <link rel="canonical" href="https://peterrobert.github.io/RoTaxCalculator/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://peterrobert.github.io/RoTaxCalculator/">
+    <meta property="og:title" content="RoTaxCalculator - Calculator Taxe Investiții România 2026">
+    <meta property="og:description" content="Calculator gratuit pentru impozite pe dividende, acțiuni, cripto și chirii. Conform legislației 2026.">
+    <meta property="og:image" content="https://peterrobert.github.io/RoTaxCalculator/og-image.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="RoTaxCalculator - Calculator Taxe România">
+    <meta name="twitter:description" content="Calculator gratuit de taxe pentru investitori. Dividende, acțiuni, cripto, chirii 2026.">
+    <meta name="twitter:image" content="https://peterrobert.github.io/RoTaxCalculator/og-image.png">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "RoTaxCalculator",
+      "description": "Calculator de taxe pentru investitori din România - dividende, acțiuni, cripto, chirii",
+      "url": "https://peterrobert.github.io/RoTaxCalculator/",
+      "applicationCategory": "FinanceApplication",
+      "operatingSystem": "Web",
+      "inLanguage": "ro",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "RON"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "RoTaxCalculator"
+      },
+      "keywords": "calculator taxe, impozit dividende, capital gains, crypto, CASS, Romania 2026"
+    }
+    </script>
+
     <!-- Google Analytics (GA4) -->
     <!--
     Uncomment and replace G-XXXXXXXXXX with your actual Measurement ID from Google Analytics
