--- a/web/index.html
+++ b/web/index.html
@@ -10,20 +10,20 @@
     <meta name="keywords" content="calculator taxe romania, impozit dividende, capital gains romania, taxe crypto, CASS, declaratie unica 212, investitii romania 2026">
     <meta name="robots" content="index, follow">
     <meta http-equiv="content-language" content="ro">
-    <link rel="canonical" href="https://peterrobert.github.io/RoTaxCalculator/">
+    <link rel="canonical" href="https://impoziteonline.ro/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://peterrobert.github.io/RoTaxCalculator/">
+    <meta property="og:url" content="https://impoziteonline.ro/">
     <meta property="og:title" content="RoTaxCalculator - Calculator Taxe Investiții România 2026">
     <meta property="og:description" content="Calculator gratuit pentru impozite pe dividende, acțiuni, cripto și chirii. Conform legislației 2026.">
-    <meta property="og:image" content="https://peterrobert.github.io/RoTaxCalculator/og-image.png">
+    <meta property="og:image" content="https://impoziteonline.ro/og-image.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="RoTaxCalculator - Calculator Taxe România">
     <meta name="twitter:description" content="Calculator gratuit de taxe pentru investitori. Dividende, acțiuni, cripto, chirii 2026.">
-    <meta name="twitter:image" content="https://peterrobert.github.io/RoTaxCalculator/og-image.png">
+    <meta name="twitter:image" content="https://impoziteonline.ro/og-image.png">
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
@@ -32,7 +32,7 @@
       "@type": "WebApplication",
       "name": "RoTaxCalculator",
       "description": "Calculator de taxe pentru investitori din România - dividende, acțiuni, cripto, chirii",
-      "url": "https://peterrobert.github.io/RoTaxCalculator/",
+      "url": "https://impoziteonline.ro/",
       "applicationCategory": "FinanceApplication",
       "operatingSystem": "Web",
       "inLanguage": "ro",
