--- a/web/index.html
+++ b/web/index.html
@@ -74,7 +74,7 @@
     <div class="container">
         <header>
             <h1>RoTaxCalculator</h1>
-            <p class="subtitle">Calculator Taxe Investitii Romania</p>
+            <p class="subtitle">Calculator Taxe Investiții România</p>
         </header>
 
         <!-- Tax Year Selector -->
@@ -107,13 +107,13 @@
 
                     <div class="section-content collapsed">
                         <div class="form-group">
-                            <label for="domesticDividends">Dividende Romanesti (RON brut)</label>
+                            <label for="domesticDividends">Dividende Românești (RON brut)</label>
                             <input type="number" id="domesticDividends" step="0.01" min="0" placeholder="0.00" disabled>
                             <small>Taxa: 16% (reținută la sursă)</small>
                         </div>
 
                         <div class="form-group">
-                            <label for="foreignDividends">Dividende Straine (RON brut)</label>
+                            <label for="foreignDividends">Dividende Străine (RON brut)</label>
                             <input type="number" id="foreignDividends" step="0.01" min="0" placeholder="0.00" disabled>
                         </div>
 
@@ -291,7 +291,7 @@
                 </div>
 
                 <div class="result-card">
-                    <h3>Contributie CASS (Asigurări Sociale de Sănătate)</h3>
+                    <h3>Contribuție CASS (Asigurări Sociale de Sănătate)</h3>
                     <div class="cass-info">
                         <p style="display: flex; align-items: center; gap: 8px; cursor: pointer;" id="netIncomeToggle">
                             <span class="cass-collapse-icon">▶</span>
