Update details on first load.

--- a/web/index.html
+++ b/web/index.html
@@ -84,9 +84,7 @@
                 <button type="button" class="year-btn active" data-year="2026">2026</button>
             </div>
             <div class="year-info" id="yearInfo">
-                <p><strong>An Fiscal: 2026</strong></p>
-                <p>Salariu Minim: <strong>Ian-Iun: 4,050 RON, Iul-Dec: 4,325 RON (+6.8%)</strong></p>
-                <p>Legislație: Legea 239/2025</p>
+                <p><strong>An Fiscal:</strong> 2026<br><strong>Salariu Minim:</strong> 4.050 RON/lună<br><small style="color: #64748b;">Ian-Iun: 4,050 RON, Iul-Dec: 4,325 RON (+6.8%)</small><br><strong>Legislație:</strong> Legea 239/2025</p>
             </div>
         </div>
 
