Default year is 2025.

--- a/web/index.html
+++ b/web/index.html
@@ -80,11 +80,11 @@
         <!-- Tax Year Selector -->
         <div class="tax-year-selector">
             <div class="year-toggle">
-                <button type="button" class="year-btn" data-year="2025">2025</button>
-                <button type="button" class="year-btn active" data-year="2026">2026</button>
+                <button type="button" class="year-btn active" data-year="2025">2025</button>
+                <button type="button" class="year-btn" data-year="2026">2026</button>
             </div>
             <div class="year-info" id="yearInfo">
-                <p><strong>An Fiscal:</strong> 2026<br><strong>Salariu Minim:</strong> 4.050 RON/lună<br><small style="color: #64748b;">Ian-Iun: 4,050 RON, Iul-Dec: 4,325 RON (+6.8%)</small><br><strong>Legislație:</strong> Legea 239/2025</p>
+                <p><strong>An Fiscal:</strong> 2025<br><strong>Salariu Minim:</strong> 4.050 RON/lună<br><small style="color: #64748b;">Neschimbat din Iulie 2024 (crește +6.8% în 2026)</small><br><strong>Legislație:</strong> Codul Fiscal 2025</p>
             </div>
         </div>
 
