--- a/web/index.html
+++ b/web/index.html
@@ -74,7 +74,7 @@
     <div class="container">
         <header>
             <h1>Impozite Online</h1>
-            <p class="subtitle">Calculator Impozit / CASS (dividende, câștiguri capital, crypto, chirii)</p>
+            <p class="subtitle">Calculator Impozit / CASS (chirii, dobânzi, dividende, câștiguri capital, criptomonede)</p>
         </header>
 
         <!-- Tax Year Selector -->
